<resources>
    <string name="app_name">Калькулятор [Kotlin]</string>

    <string name="div">/</string>
    <string name="zero_tv">0</string>
    <string name="erase"><![CDATA[<--]]></string>
    <string name="clear">C</string>
    <string name="mul">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="point">.</string>
    <string name="bt0">0</string>
    <string name="equal">=</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="plus_minus">+/-</string>
    <string name="m_plus">M+</string>
    <string name="sign_place" />
</resources>
