<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:text="@string/zero_tv"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/sign_place"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textColor="#fff"
        android:id="@+id/MC"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/mc"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/plus_minus"
        app:layout_constraintEnd_toStartOf="@+id/MR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:textColor="#fff"
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/point"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt1"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt4"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt7"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_minus" />

    <Button
        android:textColor="#fff"
        android:id="@+id/plus_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/plus_minus"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/M_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MC" />

    <Button
        android:textColor="#fff"
        android:id="@+id/MR"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/mr"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MC"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:textColor="#fff"
        android:id="@+id/div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/div"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/mul"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/erase"
        app:layout_constraintTop_toBottomOf="@+id/MR" />

    <Button
        android:textColor="#fff"
        android:id="@+id/M_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/m_plus"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/erase"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus_minus"
        app:layout_constraintTop_toBottomOf="@+id/MC" />

    <Button
        android:textColor="#fff"
        android:id="@+id/erase"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/M_plus"
        app:layout_constraintTop_toBottomOf="@+id/MR"
        android:text="⬅"
        android:textSize="@dimen/size_font_bt" />

    <Button
        android:textColor="#fff"
        android:id="@+id/mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/mul"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt8"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/M_plus" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt9"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/mul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/erase" />

    <Button
        android:textColor="#fff"
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/plus"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/mul" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#808080"
        android:onClick="click"
        android:text="@string/bt5"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:backgroundTint="#808080"
        android:text="@string/bt6"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />


    <Button
        android:textColor="#fff"
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#008744"
        android:onClick="click"
        android:text="@string/minus"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:text="@string/bt2"
        android:textSize="@dimen/size_font_bt"
        android:backgroundTint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:text="@string/bt3"
        android:textSize="@dimen/size_font_bt"
        android:backgroundTint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:textColor="#fff"
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#d62d20"
        android:onClick="click"
        android:text="@string/clear"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equal"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:textColor="#fff"
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="click"
        android:text="@string/bt0"
        android:textSize="@dimen/size_font_bt"
        android:backgroundTint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:textColor="#fff"
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#0057e7"
        android:onClick="click"
        android:text="@string/equal"
        android:textSize="@dimen/size_font_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>